--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: install dependencies 
         run: npm ci
       - name: Test code
-        run: npm run test
+        run: npm run test -- --browsers ChromeHeadless --watch=false
         
   build:
     runs-on: ubuntu-latest
