--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v4
         with:
-          distribution: "getbrains"
+          distribution: "jetbrains"
           java-version: "21.0.3"
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4.1.0
         with:
           node-version: 23.4.0
 
@@ -33,9 +33,6 @@ jobs:
 
       - name: Create Build Folder
         run: npm run build
-
-      - name: Add android folder if not present
-        run: if [ ! -d "./android" ]; then npx cap add android; fi
 
       - name: Capacitor update
         run: npx cap update
