--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,4 +41,4 @@ jobs:
         run: npx cap copy
       
       - name: Build app bundle
-        run: cd android && ./gradlew bundle && ./gradlew assembleDebug
+        run: cd android && chmod +x ./gradlew && ./gradlew bundle && ./gradlew assembleDebug
