--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,3 +42,28 @@ jobs:
       
       - name: Build app bundle
         run: cd android && chmod +x ./gradlew && ./gradlew bundle && ./gradlew assembleDebug
+
+      - name: Extract Android signing key from env
+        run: |
+          echo "${{ secrets.RELEASE_KEYSTORE }}" > android/animalCollections.jks.base64
+          base64 -d android/animalCollections.jks.base64 > android/animalCollections.decrypted.jks
+
+      - name: Sign dev build
+        run: jarsigner -keystore android/animalCollections.decrypted.jks -storepass "${{ secrets.RELEASE_KEYSTORE_PASSWORD }}" -signedjar ./android/app/release/app-release-signed.aab ./android/app/release/app-release.aab release
+
+      - name: Check folder content of android output
+        run: ls ./android/app/release
+
+      - name: Set Tag
+        id: current-datetime
+        run: echo "CURRENT_DATETIME=$(date +'%Y-%m-%d-%H_%M_%S%z')" >> "$GITHUB_OUTPUT"
+
+      - name: Build Release
+        shell: bash
+        run: |
+          hub release create ${{ steps.current-datetime.outputs.CURRENT_DATETIME }} \
+          -m ${{ steps.current-datetime.outputs.CURRENT_DATETIME }} \
+          -a ./android/app/release/app-release-signed.aab \
+          -a ./android/app/build/outputs/apk/debug/app-debug.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
