--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -49,10 +49,10 @@ jobs:
           base64 -d android/animalCollections.jks.base64 > android/animalCollections.decrypted.jks
 
       - name: Sign dev build
-        run: jarsigner -keystore android/animalCollections.decrypted.jks -storepass "${{ secrets.RELEASE_KEYSTORE_PASSWORD }}" -signedjar ./android/app/release/app-release-signed.aab  ./android/app/release/app-release.aab AnimalCollect
+        run: jarsigner -keystore android/animalCollections.decrypted.jks -storepass "${{ secrets.RELEASE_KEYSTORE_PASSWORD }}" -signedjar ./android/app/build/outputs/bundle/release/app-release-signed.aab  ./android/app/build/outputs/bundle/release/app-release.aab AnimalCollect
 
       - name: Check folder content of android output
-        run: ls ./android/app/release
+        run: ls ./android/app/build/outputs/bundle/release
 
       - name: Set Tag
         id: current-datetime
