--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,3 +53,22 @@ jobs:
 
       - name: Check folder content of android output
         run: ls ./android/app/build/outputs/bundle/release
+
+      - name: Upload Release Build to Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-artifacts
+          paths: |
+            ./android/app/build/outputs/apk/release/
+            ./android/app/build/outputs/bundle/release
+
+      - name: Create Github Release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          prerelease: true
+          files: |
+            ./android/app/build/outputs/apk/debug/app-debug.apk
+            ./android/app/build/outputs/bundle/release/app-release-signed.aab
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
