--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
-
+    tags:
+      -v*
 jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Checkout source
