--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,6 +56,10 @@ jobs:
       - name: Check folder content of android output
         run: ls ./android/app/build/outputs/bundle/release
 
+      - name: Set Tag
+        id: current-datetime
+        run: echo "CURRENT_DATETIME=$(date +'%Y-%m-%d-%H_%M_%S%z')" >> "$GITHUB_OUTPUT"
+
       - name: Upload Release Build to Artifacts
         uses: actions/upload-artifact@v3
         with:
