--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/main')
 
     steps:
       - name: Checkout source
