--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/main')
+    if: contains(github.ref, 'refs/tags')
 
     steps:
       - name: Checkout source
