--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,7 +9,7 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+
       - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+-[0-9a-zA-Z]+
 jobs:
-  build:
+  release_build:
     name: Build APK
     runs-on: ubuntu-latest
     if: contains(github.ref, 'refs/tags')
