--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,10 +9,9 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+
       - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+-[0-9a-zA-Z]+
 jobs:
-  release_build:
+  build:
     name: Build APK
     runs-on: ubuntu-latest
-    if: contains(github.ref, 'refs/tags')
 
     steps:
       - name: Checkout source
@@ -58,9 +57,6 @@ jobs:
       - name: Check folder content of android output
         run: ls ./android/app/build/outputs/bundle/release
 
-      - name: Set Tag
-        id: current-datetime
-        run: echo "CURRENT_DATETIME=$(date +'%Y-%m-%d-%H_%M_%S%z')" >> "$GITHUB_OUTPUT"
 
       - name: Upload Release Build to Artifacts
         uses: actions/upload-artifact@v3
@@ -71,7 +67,8 @@ jobs:
             ./android/app/build/outputs/bundle/release
 
       - name: Create Github Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           generate_release_notes: true
           prerelease: true
