--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,10 +4,7 @@ on:
   push:
     branches:
       - main
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
-      - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+
-      - v[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+-[0-9a-zA-Z]+
+
 jobs:
   build:
     name: Build APK
@@ -67,7 +64,7 @@ jobs:
         run: |
           gh release create ${{ steps.current-datetime.outputs.CURRENT_DATETIME }} \
           -t ${{ steps.current-datetime.outputs.CURRENT_DATETIME }} \
-          -a ./android/app/build/outputs/bundle/release/app-release-signed.aab \
-          -a ./android/app/build/outputs/apk/debug/app-debug.apk
+          --assets ./android/app/build/outputs/bundle/release/app-release-signed.aab \
+          --assets ./android/app/build/outputs/apk/debug/app-debug.apk
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
